Atualização de Responsividade

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
                     <span id="hamburguer-button"></span>
                 </button>
                 <ul id="menu">
+                    <li><a href="#home-container" class="options-mobile-home">Home</a></li>
+                    <hr>
                     <li><a href="#target-container" class="options-mobile">Lorem Ipsum</a></li>
+                    <hr>
                     <li><a href="#services-container" class="options-mobile">Lorem Ipsum</a></li>
+                    <hr>
                     <li><a href="#about" class="options-mobile">Lorem Ipsum</a></li>
                 </ul>
                 <div class="button-menu"><a href="#registration">Lorem ipsum</a></div>
